[fix] Overlay icons z-index fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,8 @@
   --color-primary3: #ccc;
   --color-primary4: #aaa;
   --color-primary5: #666;
+  --color-primary6: orange;
+
   --color-secondary1: #000;
   --color-secondary2: #202020;
   --color-secondary3: #333;
@@ -105,6 +107,10 @@ a {
   color: var(--color-primary2);
   text-decoration: none;
   font-size: var(--font-size-m);
+
+  &:hover {
+    color: var(--color-primary6);
+  }
 }
 figure {
   margin: 0;
@@ -205,7 +211,7 @@ header {
   }
 
   & .active {
-    color: orange;
+    color: var(--color-primary6);
   }
 }
 
@@ -236,6 +242,7 @@ header {
     opacity: 0.5;
   }
 
+  & a:hover,
   & .selected {
     color: var(--color-primary2);
   }
@@ -358,6 +365,7 @@ dialog {
     top: 0;
     width: 100%;
     text-align: right;
+    z-index: 999;
   }
 
   & figure {
@@ -381,7 +389,6 @@ dialog {
       width: 30px;
       line-height: 0.8;
       font: 2rem/0.85 Tahoma, Geneva, sans-serif;
-      color: var(--color-primary3);
     }
   }
 
